--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+	 <input id="newTodoInput" />
+    <button id="addTodoBtn">Add todo</button>
+	 <ol id="todoList"></ol>
     <!-- add your code here -->
+	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
